# dojo-rust-backend

./: Cargo.toml  README.md  Rocket.toml  database.sqlite
migrations/2021-01-08-145610_baseline/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs  user_queries.rs
src/api/: auth.rs  mod.rs
src/api/auth/: dto.rs  guard.rs  mod.rs  storage.rs
src/queries/: bin_queries.rs  helpers.rs  like_queries.rs  mod.rs  user_queries.rs
