[package]
name = "rust-backend-dojo"
version = "0.1.0"
authors = ["Florian Lassont <flassont@betomorrow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"], default-features = false }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { features = ["diesel_sqlite_pool"], git = "https://github.com/SergioBenitez/Rocket.git" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
uuid = { version = "0.8.1", features = ["v4"] }
dotenv = "0.15.0"
