[package]
name = "rust-backend-dojo"
version = "0.1.0"
authors = ["Florian Lassont <flassont@betomorrow.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"], default-features = false }
dotenv = "0.15.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
