[package]
name = "rust-backend-dojo"
version = "0.1.0"
authors = ["Florian Lassont <flassont@betomorrow.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"], default-features = false }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { features = ["diesel_sqlite_pool", "json"], default-features = false, git = "https://github.com/SergioBenitez/Rocket.git" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
dotenv = "0.15.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
